# mdloppet-analysis

./: .dockerignore  .gitignore  README.md  app.py  components.py  dockerfile  midnattsloppet_scraper.py  page_text.py  pyproject.toml  requirements.txt
.github/workflows/: scrape.yaml
data/: results.parquet
